CS 536/pr5/tests/errors/DerefNonPointer.minc
void main() {
int I = 0;
double D = 0;
string S = "STRING";
bool B = true;
*I;
*D;
*S;
*B;
}
